Home Page Set up
-add three tab layout
-kill mainpage after login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="app_slogan"> Always feel safe when you come face to face with law enforcement</string>
     <string name="google_txt_help">Sign up with your Google account so we can back up recordings to your Google Drive</string>
     <string name="google_signIn">Sign In with Google</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 
 
 </resources>
