--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,14 @@
     <string name="google_txt_help">Sign up with your Google account so we can back up recordings to your Google Drive</string>
     <string name="google_signIn">Sign In with Google</string>
     <string name="title_activity_home">HomeActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">Record</string>
+    <string name="tab_text_2">Emergency Contacts</string>
+    <string name="tab_text_3">Stop Tracker</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="record_fragment">Record</string>
+    <string name="contact_fragment">Contact</string>
+    <string name="tracker_fragment">Tracker</string>
 
 
 </resources>
