--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="tab_text_3">Stop Tracker</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="record_fragment">Record</string>
+    <string name="record_fragment">Press the center button to start recording</string>
     <string name="contact_fragment">Contact</string>
     <string name="tracker_fragment">Tracker</string>
 
