started UI for audio list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,9 @@
     <string name="contact_fragment">Contact</string>
     <string name="tracker_fragment">Tracker</string>
 
+    <!-- media Player -->
+    <string name="title_of_player">BckUP Player</string>
+    <string name="now_playing">Now Playing</string>
+
 
 </resources>
